[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Login/UserLogin.gd" type="Script" id=1]
[ext_resource path="res://art/login/LoginBG.png" type="Texture" id=2]
[ext_resource path="res://art/login/New Popup.png" type="Texture" id=3]
[ext_resource path="res://art/login/Facebook.png" type="Texture" id=4]
[ext_resource path="res://art/login/Google.png" type="Texture" id=5]
[ext_resource path="res://art/login/Guest.png" type="Texture" id=6]
[ext_resource path="res://scenes/Loader/Loader.tscn" type="PackedScene" id=7]
[ext_resource path="res://art/sounds/click.wav" type="AudioStream" id=8]

[node name="UserLogin" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.848083
margin_top = -0.848083
margin_right = -0.848083
margin_bottom = -0.848083
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = -2.0
margin_right = 2.0
margin_bottom = 2.0
texture = ExtResource( 2 )
stretch_mode = 1

[node name="popup" type="TextureRect" parent="."]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.5
margin_top = -165.5
margin_right = 151.5
margin_bottom = 165.5
texture = ExtResource( 3 )
stretch_mode = 1

[node name="buttons" type="Control" parent="popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.894287
margin_top = -0.894318
margin_right = 0.894287
margin_bottom = -0.894318

[node name="facebook" type="Button" parent="popup/buttons"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -91.0
margin_top = 52.0
margin_right = 91.0
margin_bottom = 125.0
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 4 )
flat = true

[node name="google" type="Button" parent="popup/buttons"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -91.0
margin_top = 117.0
margin_right = 91.0
margin_bottom = 190.0
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 5 )
flat = true

[node name="guest" type="Button" parent="popup/buttons"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -91.0
margin_top = 186.0
margin_right = 91.0
margin_bottom = 259.0
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 6 )
flat = true

[node name="Loader" parent="." instance=ExtResource( 7 )]
visible = false

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[connection signal="button_down" from="popup/buttons/facebook" to="." method="_on_facebook_button_down"]
[connection signal="button_up" from="popup/buttons/facebook" to="." method="_on_facebook_button_up"]
[connection signal="pressed" from="popup/buttons/facebook" to="." method="_on_facebook_pressed"]
[connection signal="button_down" from="popup/buttons/google" to="." method="_on_google_button_down"]
[connection signal="button_up" from="popup/buttons/google" to="." method="_on_google_button_up"]
[connection signal="pressed" from="popup/buttons/google" to="." method="_on_google_pressed"]
[connection signal="button_down" from="popup/buttons/guest" to="." method="_on_guest_button_down"]
[connection signal="button_up" from="popup/buttons/guest" to="." method="_on_guest_button_up"]
[connection signal="pressed" from="popup/buttons/guest" to="." method="_on_guest_pressed"]
